Lab3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> instructions
Rule 3     instructions_opt -> <empty>
Rule 4     instructions -> instructions instruction
Rule 5     instructions -> instruction
Rule 6     instruction -> { instructions }
Rule 7     instruction -> if
Rule 8     instruction -> return ;
Rule 9     instruction -> BREAK ;
Rule 10    instruction -> CONTINUE ;
Rule 11    instruction -> for_loop
Rule 12    instruction -> while_loop
Rule 13    instruction -> assignment ;
Rule 14    instruction -> print
Rule 15    if -> IF ( expression ) instruction
Rule 16    if -> IF ( expression ) instruction ELSE instruction
Rule 17    while_loop -> WHILE ( expression ) instruction
Rule 18    for_loop -> FOR ID = expression : expression instruction
Rule 19    return -> RETURN expression
Rule 20    return -> RETURN
Rule 21    print -> PRINT ( list_for_print ) ;
Rule 22    print -> PRINT list_for_print ;
Rule 23    list_for_print -> expression , list_for_print
Rule 24    list_for_print -> expression
Rule 25    expression -> var
Rule 26    expression -> ( expression )
Rule 27    expression -> INTNUM
Rule 28    expression -> FLOATNUM
Rule 29    expression -> STRING
Rule 30    var -> ID
Rule 31    var -> ID [ expression , expression ]
Rule 32    assignment -> var = expression
Rule 33    assignment -> var ADDASSIGN expression
Rule 34    assignment -> var SUBASSIGN expression
Rule 35    assignment -> var MULASSIGN expression
Rule 36    assignment -> var DIVASSIGN expression
Rule 37    expression -> expression '
Rule 38    expression -> - expression
Rule 39    expression -> expression + expression
Rule 40    expression -> expression - expression
Rule 41    expression -> expression * expression
Rule 42    expression -> expression / expression
Rule 43    expression -> expression DOTADD expression
Rule 44    expression -> expression DOTSUB expression
Rule 45    expression -> expression DOTMUL expression
Rule 46    expression -> expression DOTDIV expression
Rule 47    expression -> expression < expression
Rule 48    expression -> expression > expression
Rule 49    expression -> expression LESSEQ expression
Rule 50    expression -> expression MOREEQ expression
Rule 51    expression -> expression EQUAL expression
Rule 52    expression -> expression NOTEQUAL expression
Rule 53    expression -> matrix
Rule 54    matrix -> [ matrix ]
Rule 55    matrix -> [ sub_string_1 ]
Rule 56    matrix -> [ sub_string_1 , matrix ]
Rule 57    sub_string_1 -> sub_string_1 , expression
Rule 58    sub_string_1 -> expression
Rule 59    expression -> matrix_creation ( expression )
Rule 60    matrix_creation -> ZEROS
Rule 61    matrix_creation -> ONES
Rule 62    matrix_creation -> EYE

Terminals, with rules where they appear

'                    : 37
(                    : 15 16 17 21 26 59
)                    : 15 16 17 21 26 59
*                    : 41
+                    : 39
,                    : 23 31 56 57
-                    : 38 40
/                    : 42
:                    : 18
;                    : 8 9 10 13 21 22
<                    : 47
=                    : 18 32
>                    : 48
ADDASSIGN            : 33
BREAK                : 9
CONTINUE             : 10
DIVASSIGN            : 36
DOTADD               : 43
DOTDIV               : 46
DOTMUL               : 45
DOTSUB               : 44
ELSE                 : 16
EQUAL                : 51
EYE                  : 62
FLOATNUM             : 28
FOR                  : 18
ID                   : 18 30 31
IF                   : 15 16
INTNUM               : 27
LESSEQ               : 49
MOREEQ               : 50
MULASSIGN            : 35
NOTEQUAL             : 52
ONES                 : 61
PRINT                : 21 22
RETURN               : 19 20
STRING               : 29
SUBASSIGN            : 34
WHILE                : 17
ZEROS                : 60
[                    : 31 54 55 56
]                    : 31 54 55 56
error                : 
{                    : 6
}                    : 6

Nonterminals, with rules where they appear

assignment           : 13
expression           : 15 16 17 18 18 19 23 24 26 31 31 32 33 34 35 36 37 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 57 58 59
for_loop             : 11
if                   : 7
instruction          : 4 5 15 16 16 17 18
instructions         : 2 4 6
instructions_opt     : 1
list_for_print       : 21 22 23
matrix               : 53 54 56
matrix_creation      : 59
print                : 14
program              : 0
return               : 8
sub_string_1         : 55 56 57
var                  : 25 32 33 34 35 36
while_loop           : 12

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> . instructions
    (3) instructions_opt -> .
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . if
    (8) instruction -> . return ;
    (9) instruction -> . BREAK ;
    (10) instruction -> . CONTINUE ;
    (11) instruction -> . for_loop
    (12) instruction -> . while_loop
    (13) instruction -> . assignment ;
    (14) instruction -> . print
    (15) if -> . IF ( expression ) instruction
    (16) if -> . IF ( expression ) instruction ELSE instruction
    (19) return -> . RETURN expression
    (20) return -> . RETURN
    (18) for_loop -> . FOR ID = expression : expression instruction
    (17) while_loop -> . WHILE ( expression ) instruction
    (32) assignment -> . var = expression
    (33) assignment -> . var ADDASSIGN expression
    (34) assignment -> . var SUBASSIGN expression
    (35) assignment -> . var MULASSIGN expression
    (36) assignment -> . var DIVASSIGN expression
    (21) print -> . PRINT ( list_for_print ) ;
    (22) print -> . PRINT list_for_print ;
    (30) var -> . ID
    (31) var -> . ID [ expression , expression ]

    $end            reduce using rule 3 (instructions_opt -> .)
    {               shift and go to state 5
    BREAK           shift and go to state 8
    CONTINUE        shift and go to state 9
    IF              shift and go to state 14
    RETURN          shift and go to state 15
    FOR             shift and go to state 16
    WHILE           shift and go to state 18
    PRINT           shift and go to state 20
    ID              shift and go to state 17

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    if                             shift and go to state 6
    return                         shift and go to state 7
    for_loop                       shift and go to state 10
    while_loop                     shift and go to state 11
    assignment                     shift and go to state 12
    print                          shift and go to state 13
    var                            shift and go to state 19

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (2) instructions_opt -> instructions .
    (4) instructions -> instructions . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . if
    (8) instruction -> . return ;
    (9) instruction -> . BREAK ;
    (10) instruction -> . CONTINUE ;
    (11) instruction -> . for_loop
    (12) instruction -> . while_loop
    (13) instruction -> . assignment ;
    (14) instruction -> . print
    (15) if -> . IF ( expression ) instruction
    (16) if -> . IF ( expression ) instruction ELSE instruction
    (19) return -> . RETURN expression
    (20) return -> . RETURN
    (18) for_loop -> . FOR ID = expression : expression instruction
    (17) while_loop -> . WHILE ( expression ) instruction
    (32) assignment -> . var = expression
    (33) assignment -> . var ADDASSIGN expression
    (34) assignment -> . var SUBASSIGN expression
    (35) assignment -> . var MULASSIGN expression
    (36) assignment -> . var DIVASSIGN expression
    (21) print -> . PRINT ( list_for_print ) ;
    (22) print -> . PRINT list_for_print ;
    (30) var -> . ID
    (31) var -> . ID [ expression , expression ]

    $end            reduce using rule 2 (instructions_opt -> instructions .)
    {               shift and go to state 5
    BREAK           shift and go to state 8
    CONTINUE        shift and go to state 9
    IF              shift and go to state 14
    RETURN          shift and go to state 15
    FOR             shift and go to state 16
    WHILE           shift and go to state 18
    PRINT           shift and go to state 20
    ID              shift and go to state 17

    instruction                    shift and go to state 21
    if                             shift and go to state 6
    return                         shift and go to state 7
    for_loop                       shift and go to state 10
    while_loop                     shift and go to state 11
    assignment                     shift and go to state 12
    print                          shift and go to state 13
    var                            shift and go to state 19

state 4

    (5) instructions -> instruction .

    {               reduce using rule 5 (instructions -> instruction .)
    BREAK           reduce using rule 5 (instructions -> instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instruction .)
    IF              reduce using rule 5 (instructions -> instruction .)
    RETURN          reduce using rule 5 (instructions -> instruction .)
    FOR             reduce using rule 5 (instructions -> instruction .)
    WHILE           reduce using rule 5 (instructions -> instruction .)
    PRINT           reduce using rule 5 (instructions -> instruction .)
    ID              reduce using rule 5 (instructions -> instruction .)
    $end            reduce using rule 5 (instructions -> instruction .)
    }               reduce using rule 5 (instructions -> instruction .)


state 5

    (6) instruction -> { . instructions }
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . if
    (8) instruction -> . return ;
    (9) instruction -> . BREAK ;
    (10) instruction -> . CONTINUE ;
    (11) instruction -> . for_loop
    (12) instruction -> . while_loop
    (13) instruction -> . assignment ;
    (14) instruction -> . print
    (15) if -> . IF ( expression ) instruction
    (16) if -> . IF ( expression ) instruction ELSE instruction
    (19) return -> . RETURN expression
    (20) return -> . RETURN
    (18) for_loop -> . FOR ID = expression : expression instruction
    (17) while_loop -> . WHILE ( expression ) instruction
    (32) assignment -> . var = expression
    (33) assignment -> . var ADDASSIGN expression
    (34) assignment -> . var SUBASSIGN expression
    (35) assignment -> . var MULASSIGN expression
    (36) assignment -> . var DIVASSIGN expression
    (21) print -> . PRINT ( list_for_print ) ;
    (22) print -> . PRINT list_for_print ;
    (30) var -> . ID
    (31) var -> . ID [ expression , expression ]

    {               shift and go to state 5
    BREAK           shift and go to state 8
    CONTINUE        shift and go to state 9
    IF              shift and go to state 14
    RETURN          shift and go to state 15
    FOR             shift and go to state 16
    WHILE           shift and go to state 18
    PRINT           shift and go to state 20
    ID              shift and go to state 17

    instructions                   shift and go to state 22
    instruction                    shift and go to state 4
    if                             shift and go to state 6
    return                         shift and go to state 7
    for_loop                       shift and go to state 10
    while_loop                     shift and go to state 11
    assignment                     shift and go to state 12
    print                          shift and go to state 13
    var                            shift and go to state 19

state 6

    (7) instruction -> if .

    {               reduce using rule 7 (instruction -> if .)
    BREAK           reduce using rule 7 (instruction -> if .)
    CONTINUE        reduce using rule 7 (instruction -> if .)
    IF              reduce using rule 7 (instruction -> if .)
    RETURN          reduce using rule 7 (instruction -> if .)
    FOR             reduce using rule 7 (instruction -> if .)
    WHILE           reduce using rule 7 (instruction -> if .)
    PRINT           reduce using rule 7 (instruction -> if .)
    ID              reduce using rule 7 (instruction -> if .)
    $end            reduce using rule 7 (instruction -> if .)
    }               reduce using rule 7 (instruction -> if .)
    ELSE            reduce using rule 7 (instruction -> if .)


state 7

    (8) instruction -> return . ;

    ;               shift and go to state 23


state 8

    (9) instruction -> BREAK . ;

    ;               shift and go to state 24


state 9

    (10) instruction -> CONTINUE . ;

    ;               shift and go to state 25


state 10

    (11) instruction -> for_loop .

    {               reduce using rule 11 (instruction -> for_loop .)
    BREAK           reduce using rule 11 (instruction -> for_loop .)
    CONTINUE        reduce using rule 11 (instruction -> for_loop .)
    IF              reduce using rule 11 (instruction -> for_loop .)
    RETURN          reduce using rule 11 (instruction -> for_loop .)
    FOR             reduce using rule 11 (instruction -> for_loop .)
    WHILE           reduce using rule 11 (instruction -> for_loop .)
    PRINT           reduce using rule 11 (instruction -> for_loop .)
    ID              reduce using rule 11 (instruction -> for_loop .)
    $end            reduce using rule 11 (instruction -> for_loop .)
    }               reduce using rule 11 (instruction -> for_loop .)
    ELSE            reduce using rule 11 (instruction -> for_loop .)


state 11

    (12) instruction -> while_loop .

    {               reduce using rule 12 (instruction -> while_loop .)
    BREAK           reduce using rule 12 (instruction -> while_loop .)
    CONTINUE        reduce using rule 12 (instruction -> while_loop .)
    IF              reduce using rule 12 (instruction -> while_loop .)
    RETURN          reduce using rule 12 (instruction -> while_loop .)
    FOR             reduce using rule 12 (instruction -> while_loop .)
    WHILE           reduce using rule 12 (instruction -> while_loop .)
    PRINT           reduce using rule 12 (instruction -> while_loop .)
    ID              reduce using rule 12 (instruction -> while_loop .)
    $end            reduce using rule 12 (instruction -> while_loop .)
    }               reduce using rule 12 (instruction -> while_loop .)
    ELSE            reduce using rule 12 (instruction -> while_loop .)


state 12

    (13) instruction -> assignment . ;

    ;               shift and go to state 26


state 13

    (14) instruction -> print .

    {               reduce using rule 14 (instruction -> print .)
    BREAK           reduce using rule 14 (instruction -> print .)
    CONTINUE        reduce using rule 14 (instruction -> print .)
    IF              reduce using rule 14 (instruction -> print .)
    RETURN          reduce using rule 14 (instruction -> print .)
    FOR             reduce using rule 14 (instruction -> print .)
    WHILE           reduce using rule 14 (instruction -> print .)
    PRINT           reduce using rule 14 (instruction -> print .)
    ID              reduce using rule 14 (instruction -> print .)
    $end            reduce using rule 14 (instruction -> print .)
    }               reduce using rule 14 (instruction -> print .)
    ELSE            reduce using rule 14 (instruction -> print .)


state 14

    (15) if -> IF . ( expression ) instruction
    (16) if -> IF . ( expression ) instruction ELSE instruction

    (               shift and go to state 27


state 15

    (19) return -> RETURN . expression
    (20) return -> RETURN .
    (25) expression -> . var
    (26) expression -> . ( expression )
    (27) expression -> . INTNUM
    (28) expression -> . FLOATNUM
    (29) expression -> . STRING
    (37) expression -> . expression '
    (38) expression -> . - expression
    (39) expression -> . expression + expression
    (40) expression -> . expression - expression
    (41) expression -> . expression * expression
    (42) expression -> . expression / expression
    (43) expression -> . expression DOTADD expression
    (44) expression -> . expression DOTSUB expression
    (45) expression -> . expression DOTMUL expression
    (46) expression -> . expression DOTDIV expression
    (47) expression -> . expression < expression
    (48) expression -> . expression > expression
    (49) expression -> . expression LESSEQ expression
    (50) expression -> . expression MOREEQ expression
    (51) expression -> . expression EQUAL expression
    (52) expression -> . expression NOTEQUAL expression
    (53) expression -> . matrix
    (59) expression -> . matrix_creation ( expression )
    (30) var -> . ID
    (31) var -> . ID [ expression , expression ]
    (54) matrix -> . [ matrix ]
    (55) matrix -> . [ sub_string_1 ]
    (56) matrix -> . [ sub_string_1 , matrix ]
    (60) matrix_creation -> . ZEROS
    (61) matrix_creation -> . ONES
    (62) matrix_creation -> . EYE

    ;               reduce using rule 20 (return -> RETURN .)
    (               shift and go to state 30
    INTNUM          shift and go to state 31
    FLOATNUM        shift and go to state 32
    STRING          shift and go to state 33
    -               shift and go to state 34
    ID              shift and go to state 17
    [               shift and go to state 37
    ZEROS           shift and go to state 38
    ONES            shift and go to state 39
    EYE             shift and go to state 40

    expression                     shift and go to state 28
    var                            shift and go to state 29
    matrix                         shift and go to state 35
    matrix_creation                shift and go to state 36

state 16

    (18) for_loop -> FOR . ID = expression : expression instruction

    ID              shift and go to state 41


state 17

    (30) var -> ID .
    (31) var -> ID . [ expression , expression ]

    =               reduce using rule 30 (var -> ID .)
    ADDASSIGN       reduce using rule 30 (var -> ID .)
    SUBASSIGN       reduce using rule 30 (var -> ID .)
    MULASSIGN       reduce using rule 30 (var -> ID .)
    DIVASSIGN       reduce using rule 30 (var -> ID .)
    '               reduce using rule 30 (var -> ID .)
    +               reduce using rule 30 (var -> ID .)
    -               reduce using rule 30 (var -> ID .)
    *               reduce using rule 30 (var -> ID .)
    /               reduce using rule 30 (var -> ID .)
    DOTADD          reduce using rule 30 (var -> ID .)
    DOTSUB          reduce using rule 30 (var -> ID .)
    DOTMUL          reduce using rule 30 (var -> ID .)
    DOTDIV          reduce using rule 30 (var -> ID .)
    <               reduce using rule 30 (var -> ID .)
    >               reduce using rule 30 (var -> ID .)
    LESSEQ          reduce using rule 30 (var -> ID .)
    MOREEQ          reduce using rule 30 (var -> ID .)
    EQUAL           reduce using rule 30 (var -> ID .)
    NOTEQUAL        reduce using rule 30 (var -> ID .)
    ;               reduce using rule 30 (var -> ID .)
    ,               reduce using rule 30 (var -> ID .)
    )               reduce using rule 30 (var -> ID .)
    ]               reduce using rule 30 (var -> ID .)
    :               reduce using rule 30 (var -> ID .)
    {               reduce using rule 30 (var -> ID .)
    BREAK           reduce using rule 30 (var -> ID .)
    CONTINUE        reduce using rule 30 (var -> ID .)
    IF              reduce using rule 30 (var -> ID .)
    RETURN          reduce using rule 30 (var -> ID .)
    FOR             reduce using rule 30 (var -> ID .)
    WHILE           reduce using rule 30 (var -> ID .)
    PRINT           reduce using rule 30 (var -> ID .)
    ID              reduce using rule 30 (var -> ID .)
    [               shift and go to state 42


state 18

    (17) while_loop -> WHILE . ( expression ) instruction

    (               shift and go to state 43


state 19

    (32) assignment -> var . = expression
    (33) assignment -> var . ADDASSIGN expression
    (34) assignment -> var . SUBASSIGN expression
    (35) assignment -> var . MULASSIGN expression
    (36) assignment -> var . DIVASSIGN expression

    =               shift and go to state 44
    ADDASSIGN       shift and go to state 45
    SUBASSIGN       shift and go to state 46
    MULASSIGN       shift and go to state 47
    DIVASSIGN       shift and go to state 48


state 20

    (21) print -> PRINT . ( list_for_print ) ;
    (22) print -> PRINT . list_for_print ;
    (23) list_for_print -> . expression , list_for_print
    (24) list_for_print -> . expression
    (25) expression -> . var
    (26) expression -> . ( expression )
    (27) expression -> . INTNUM
    (28) expression -> . FLOATNUM
    (29) expression -> . STRING
    (37) expression -> . expression '
    (38) expression -> . - expression
    (39) expression -> . expression + expression
    (40) expression -> . expression - expression
    (41) expression -> . expression * expression
    (42) expression -> . expression / expression
    (43) expression -> . expression DOTADD expression
    (44) expression -> . expression DOTSUB expression
    (45) expression -> . expression DOTMUL expression
    (46) expression -> . expression DOTDIV expression
    (47) expression -> . expression < expression
    (48) expression -> . expression > expression
    (49) expression -> . expression LESSEQ expression
    (50) expression -> . expression MOREEQ expression
    (51) expression -> . expression EQUAL expression
    (52) expression -> . expression NOTEQUAL expression
    (53) expression -> . matrix
    (59) expression -> . matrix_creation ( expression )
    (30) var -> . ID
    (31) var -> . ID [ expression , expression ]
    (54) matrix -> . [ matrix ]
    (55) matrix -> . [ sub_string_1 ]
    (56) matrix -> . [ sub_string_1 , matrix ]
    (60) matrix_creation -> . ZEROS
    (61) matrix_creation -> . ONES
    (62) matrix_creation -> . EYE

    (               shift and go to state 49
    INTNUM          shift and go to state 31
    FLOATNUM        shift and go to state 32
    STRING          shift and go to state 33
    -               shift and go to state 34
    ID              shift and go to state 17
    [               shift and go to state 37
    ZEROS           shift and go to state 38
    ONES            shift and go to state 39
    EYE             shift and go to state 40

    list_for_print                 shift and go to state 50
    expression                     shift and go to state 51
    var                            shift and go to state 29
    matrix                         shift and go to state 35
    matrix_creation                shift and go to state 36

state 21

    (4) instructions -> instructions instruction .

    {               reduce using rule 4 (instructions -> instructions instruction .)
    BREAK           reduce using rule 4 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instructions instruction .)
    IF              reduce using rule 4 (instructions -> instructions instruction .)
    RETURN          reduce using rule 4 (instructions -> instructions instruction .)
    FOR             reduce using rule 4 (instructions -> instructions instruction .)
    WHILE           reduce using rule 4 (instructions -> instructions instruction .)
    PRINT           reduce using rule 4 (instructions -> instructions instruction .)
    ID              reduce using rule 4 (instructions -> instructions instruction .)
    $end            reduce using rule 4 (instructions -> instructions instruction .)
    }               reduce using rule 4 (instructions -> instructions instruction .)


state 22

    (6) instruction -> { instructions . }
    (4) instructions -> instructions . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . if
    (8) instruction -> . return ;
    (9) instruction -> . BREAK ;
    (10) instruction -> . CONTINUE ;
    (11) instruction -> . for_loop
    (12) instruction -> . while_loop
    (13) instruction -> . assignment ;
    (14) instruction -> . print
    (15) if -> . IF ( expression ) instruction
    (16) if -> . IF ( expression ) instruction ELSE instruction
    (19) return -> . RETURN expression
    (20) return -> . RETURN
    (18) for_loop -> . FOR ID = expression : expression instruction
    (17) while_loop -> . WHILE ( expression ) instruction
    (32) assignment -> . var = expression
    (33) assignment -> . var ADDASSIGN expression
    (34) assignment -> . var SUBASSIGN expression
    (35) assignment -> . var MULASSIGN expression
    (36) assignment -> . var DIVASSIGN expression
    (21) print -> . PRINT ( list_for_print ) ;
    (22) print -> . PRINT list_for_print ;
    (30) var -> . ID
    (31) var -> . ID [ expression , expression ]

    }               shift and go to state 52
    {               shift and go to state 5
    BREAK           shift and go to state 8
    CONTINUE        shift and go to state 9
    IF              shift and go to state 14
    RETURN          shift and go to state 15
    FOR             shift and go to state 16
    WHILE           shift and go to state 18
    PRINT           shift and go to state 20
    ID              shift and go to state 17

    instruction                    shift and go to state 21
    if                             shift and go to state 6
    return                         shift and go to state 7
    for_loop                       shift and go to state 10
    while_loop                     shift and go to state 11
    assignment                     shift and go to state 12
    print                          shift and go to state 13
    var                            shift and go to state 19

state 23

    (8) instruction -> return ; .

    {               reduce using rule 8 (instruction -> return ; .)
    BREAK           reduce using rule 8 (instruction -> return ; .)
    CONTINUE        reduce using rule 8 (instruction -> return ; .)
    IF              reduce using rule 8 (instruction -> return ; .)
    RETURN          reduce using rule 8 (instruction -> return ; .)
    FOR             reduce using rule 8 (instruction -> return ; .)
    WHILE           reduce using rule 8 (instruction -> return ; .)
    PRINT           reduce using rule 8 (instruction -> return ; .)
    ID              reduce using rule 8 (instruction -> return ; .)
    $end            reduce using rule 8 (instruction -> return ; .)
    }               reduce using rule 8 (instruction -> return ; .)
    ELSE            reduce using rule 8 (instruction -> return ; .)


state 24

    (9) instruction -> BREAK ; .

    {               reduce using rule 9 (instruction -> BREAK ; .)
    BREAK           reduce using rule 9 (instruction -> BREAK ; .)
    CONTINUE        reduce using rule 9 (instruction -> BREAK ; .)
    IF              reduce using rule 9 (instruction -> BREAK ; .)
    RETURN          reduce using rule 9 (instruction -> BREAK ; .)
    FOR             reduce using rule 9 (instruction -> BREAK ; .)
    WHILE           reduce using rule 9 (instruction -> BREAK ; .)
    PRINT           reduce using rule 9 (instruction -> BREAK ; .)
    ID              reduce using rule 9 (instruction -> BREAK ; .)
    $end            reduce using rule 9 (instruction -> BREAK ; .)
    }               reduce using rule 9 (instruction -> BREAK ; .)
    ELSE            reduce using rule 9 (instruction -> BREAK ; .)


state 25

    (10) instruction -> CONTINUE ; .

    {               reduce using rule 10 (instruction -> CONTINUE ; .)
    BREAK           reduce using rule 10 (instruction -> CONTINUE ; .)
    CONTINUE        reduce using rule 10 (instruction -> CONTINUE ; .)
    IF              reduce using rule 10 (instruction -> CONTINUE ; .)
    RETURN          reduce using rule 10 (instruction -> CONTINUE ; .)
    FOR             reduce using rule 10 (instruction -> CONTINUE ; .)
    WHILE           reduce using rule 10 (instruction -> CONTINUE ; .)
    PRINT           reduce using rule 10 (instruction -> CONTINUE ; .)
    ID              reduce using rule 10 (instruction -> CONTINUE ; .)
    $end            reduce using rule 10 (instruction -> CONTINUE ; .)
    }               reduce using rule 10 (instruction -> CONTINUE ; .)
    ELSE            reduce using rule 10 (instruction -> CONTINUE ; .)


state 26

    (13) instruction -> assignment ; .

    {               reduce using rule 13 (instruction -> assignment ; .)
    BREAK           reduce using rule 13 (instruction -> assignment ; .)
    CONTINUE        reduce using rule 13 (instruction -> assignment ; .)
    IF              reduce using rule 13 (instruction -> assignment ; .)
    RETURN          reduce using rule 13 (instruction -> assignment ; .)
    FOR             reduce using rule 13 (instruction -> assignment ; .)
    WHILE           reduce using rule 13 (instruction -> assignment ; .)
    PRINT           reduce using rule 13 (instruction -> assignment ; .)
    ID              reduce using rule 13 (instruction -> assignment ; .)
    $end            reduce using rule 13 (instruction -> assignment ; .)
    }               reduce using rule 13 (instruction -> assignment ; .)
    ELSE            reduce using rule 13 (instruction -> assignment ; .)


state 27
